--- a/app/views/trips/_trip_parameters_panel.html.haml
+++ b/app/views/trips/_trip_parameters_panel.html.haml
@@ -42,9 +42,11 @@
       .col-sm-3
         = f.label :pickup_address_label, translate_helper("pickup_address")
       .col-sm-9
-        = text_field_tag "pickup_search_address", @trip.pickup_address.try(:one_line_text), class: "nearly-full form-control trip-address-picker"
+        = text_field_tag "pickup_address", @trip.pickup_address.try(:one_line_text) || params[:pickup_address], class: "nearly-full form-control trip-address-picker"
+        - if edit_mode != :show
+          = f.hidden_field :pickup_address_id
+          = hidden_field_tag 'trip_pickup_google_address', params[:trip_pickup_google_address]
         
-       
     .form-group.col-sm-12
       = f.fields_for :customer do |c|
         .col-sm-3
@@ -59,7 +61,10 @@
       .col-sm-3
         = f.label :dropoff_address_label, translate_helper("dropoff_address") 
       .col-sm-9
-        = text_field_tag "dropoff_search_address", @trip.dropoff_address.try(:one_line_text), class: "nearly-full form-control trip-address-picker"
+        = text_field_tag "dropoff_address", @trip.dropoff_address.try(:one_line_text) || params[:dropoff_address], class: "nearly-full form-control trip-address-picker"
+        - if edit_mode != :show
+          = f.hidden_field :dropoff_address_id
+          = hidden_field_tag 'trip_dropoff_google_address', params[:trip_dropoff_google_address]
        
     .form-group.col-sm-12
       .col-sm-3
