--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -21,4 +21,4 @@
 @import "jquery-ui-timepicker-addon";
 @import "fullcalendar";
 @import "v2_theme";
-@import "place_picker";
+@import "trip_place_picker";
