Add comments to subscription trips and runs (C.15, D.5)

--- a/app/views/repeating_trips/_repetition_fields.html.haml
+++ b/app/views/repeating_trips/_repetition_fields.html.haml
@@ -35,3 +35,9 @@
   .col-sm-6.col-md-3
     = f.text_field :repetition_interval, :size => 2, class: 'col-sm-6 col-md-3 form-control'
     = translate_helper(:weeks)
+.form-group.col-sm-12
+  .col-sm-3
+    %label
+      = translate_helper(:repetition_comments)
+  .col-sm-9
+    = f.text_area :comments, class: 'form-control', maxlength: 30
