--- a/app/views/trips/_customer_panel.html.haml
+++ b/app/views/trips/_customer_panel.html.haml
@@ -8,9 +8,9 @@
         = translate_helper("customer")
       .col-sm-9{style: 'white-space: nowrap;'}
         - if @is_repeating_trip
-          = render "repeating_trips/customer", :f => f, :trip => @trip, edit_mode: edit_mode
+          = render "trips/customer", :f => f, :trip => @trip, edit_mode: edit_mode, prefix: 'repeating_'
         - else
-          = render "trips/customer", :f => f, :trip => @trip, edit_mode: edit_mode
+          = render "trips/customer", :f => f, :trip => @trip, edit_mode: edit_mode, prefix: ''
     .form-group.col-sm-12
       %label.col-sm-3{for:"customer_private_notes"}
         = translate_helper("customer_private_notes")
