Customer trip summary dialog (C.22)

--- a/app/views/customers/_customer_trip_summary_table.html.haml
+++ b/app/views/customers/_customer_trip_summary_table.html.haml
@@ -1,7 +1,7 @@
 %table#customerTripSummaryTable.table.table-striped.table-bordered
   %thead
     %tr
-      %th
+      %th= translate_helper("pickup_date") 
       %th= translate_helper("pickup_address_column") 
       %th= translate_helper("pickup_time_column") 
       %th= translate_helper("dropoff_address_column")
@@ -12,6 +12,8 @@
     - else
       - trips.each do |trip|
         %tr
+          %td
+            = format_time_for_listing_day trip.pickup_time
           %td
             = trip.pickup_address.try :address_text
           %td
