Implement back-end to support creating a new trip or repeating trip based on customer trip summary(C.22)

--- a/app/views/customers/_customer_trip_summary_table.html.haml
+++ b/app/views/customers/_customer_trip_summary_table.html.haml
@@ -11,7 +11,7 @@
       %p= translate_helper('no_trips')
     - else
       - trips.each do |trip|
-        %tr
+        %tr{data: {trip_id: trip.id}}
           %td
             = format_time_for_listing_day trip.pickup_time
           %td
