--- a/app/views/trips/_customer_trip_summary_dialog.html.haml
+++ b/app/views/trips/_customer_trip_summary_dialog.html.haml
@@ -5,10 +5,32 @@
       .modal-content
         .modal-header
           .pull-right
+            = f.submit translate_helper(:search_button_label), id: 'searchCustomerTripSummary', class: 'btn action-button', role: 'button'
             %button{type: 'button', class: 'btn action-button', data: {dismiss: 'modal'}}
-              = translate_helper(:ok)
+              = translate_helper(:close_button_label)
           .modal-title{:style => "text-align:left; font-weight: bold; font-size: large;"}
             = translate_helper(:customer_trip_summary_for)
         .modal-body.row{:style => "text-align:left; margin: 0px;"}
-          .col-sm-12#customerTripSummaryTable{style: 'padding: 5px;'}
-            
+          .row.col-sm-12
+            .col-sm-6{style: 'padding: 0px;'}
+              %label= translate_helper("from_date")
+              = text_field_tag :start_date, format_time_for_listing_day(Date.today), class: 'date-picker form-control', readonly: true
+            .col-sm-6{style: 'padding: 0px 5px;'}
+              %label= translate_helper("to_date")
+              = text_field_tag :end_date, nil, class: 'date-picker form-control', readonly: true
+           
+          .row.col-sm-12{style: 'padding-top: 20px;'}
+            %div
+              %label= translate_helper('customer_trip_summary_instructions')
+            %div#customerTripSummaryTable
+
+:javascript 
+$(function() {
+  $('#customerTripSummaryDialog').on('shown.bs.modal', function() {
+    // if datepicker is not initialized, then do it now
+    if($(this).find('.ui-datepicker-trigger').length == 0) {
+      makeDatePickers();
+    }
+  });
+});
+    
