Show only authorized providers on customer profile page (RPII-60)

--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -44,7 +44,7 @@
   <div class="col-sm-12 col-md-6">
     <%= render 'common_addresses_panel', edit_mode: edit_mode %>
     <%= render 'eligibility_panel', f: f %>
-    <%= render 'providers_panel', f: f %>
+    <%= render 'providers_panel', f: f, edit_mode: edit_mode %>
     <%= render 'donations_panel', f: f, edit_mode: edit_mode  %>
     <%= render 'others_panel', f: f, edit_mode: edit_mode %>
   </div>
