--- a/app/views/customers/_providers_panel.html.haml
+++ b/app/views/customers/_providers_panel.html.haml
@@ -5,7 +5,18 @@
     %h3.panel-title
       = translate_helper(:customer_providers_panel)
   .panel-body
-    = f.association :authorized_providers, as: :check_boxes, label: false, :item_wrapper_class => 'col-md-12', :label_html => { :class => 'col-md-12', :wrapper => false }
+    - if edit_mode == :show
+      %ul
+        - default_provider_name = @customer.provider.try(:name)
+        - @customer.authorized_providers.pluck(:name).sort.each do |provider_name|
+          - if provider_name == default_provider_name
+            %li
+              %b= provider_name
+              = "(#{translate_helper('default')})"
+          - else
+            %li= provider_name
+    - else
+      = f.association :authorized_providers, as: :check_boxes, label: false, :item_wrapper_class => 'col-md-12', :label_html => { :class => 'col-md-12', :wrapper => false }
 
 :javascript
   $(document).ready(function() {
