--- a/app/views/providers/show.html.erb
+++ b/app/views/providers/show.html.erb
@@ -128,7 +128,7 @@
       <ol class="section fourth">
         <li>
           <%= label_tag translate_helper("enabled") %>
-          <%= select_tag "cab", options_for_select( [["No", false], ["Yes", true]], @provider.cab_enabled? ), { :onchange => "form.submit();" } %>
+          <%= select_tag "cab", options_for_select( [["No", false], ["Yes", true]], @provider.try(:cab_enabled?) ), { :onchange => "form.submit();" } %>
         </li>
       </ol>
     </fieldset>
