Remove building name from provider common address result[RPII-64]

--- a/app/views/customers/_new_address_js.html.erb
+++ b/app/views/customers/_new_address_js.html.erb
@@ -7,7 +7,7 @@
     form = $("#" + field + "-address-form");
     form.find('#address_id').val(address.id);
     form.find('#' + field + '_name').val(address.name);
-    form.find('#' + field + '_building_name').val(address.building_name);
+    //form.find('#' + field + '_building_name').val(address.building_name);
     form.find('#' + field + '_address').val(address.address);
     form.find('#' + field + '_full_address').val(address.label);
     form.find('#' + field + '_city').val(address.city);
