--- a/app/views/runs/_date_time_panel.html.haml
+++ b/app/views/runs/_date_time_panel.html.haml
@@ -5,11 +5,12 @@
     %h3.panel-title
       = translate_helper(:date_and_time)
   .panel-body{style: 'padding: 5px;'}
-    .form-group.col-sm-12
-      .col-sm-3
-        = f.label :date, translate_helper("date") 
-      .col-sm-9
-        = f.text_field :date, :size => 10, :value => format_time_for_listing_day(@run.scheduled_start_time), class: 'date-picker form-control', readonly: true
+    - unless @is_repeating_run
+      .form-group.col-sm-12
+        .col-sm-3
+          = f.label :date, translate_helper("date") 
+        .col-sm-9
+          = f.text_field :date, :size => 10, :value => format_time_for_listing_day(@run.scheduled_start_time), class: 'date-picker form-control', readonly: true
     .form-group.col-sm-12
       .col-sm-3
         = f.label :scheduled_start_time, translate_helper("scheduled_start_time")
