--- a/app/views/providers/show.html.erb
+++ b/app/views/providers/show.html.erb
@@ -168,6 +168,25 @@
 
 <hr />
 
+<h2 class="section-header"><%=translate_helper("age_eligibility")%></h2>
+<% if can? :edit, @provider %>
+  <%= form_tag change_eligible_age_provider_path(@provider) do %>
+    <fieldset>
+      <ol class="section fourth">
+        <li>
+          <%= label_tag translate_helper("eligible_age") %>
+          <%= number_field_tag "eligible_age", @provider.eligible_age || Provider::DEFAULT_ELIGIBLE_AGE, { class: 'form-control' } %>
+        </li>
+      </ol>
+      <div class="actions">
+        <%= submit_tag translate_helper("update") %>
+      </div>
+    </fieldset>
+  <% end %>
+<% end %>
+
+<hr />
+
 <h2 class="section-header"><%= translate_helper("provider_form_fields_required_for_run_completion") %></h2>
 <% if can? :edit, @provider %>
   <%= form_tag change_fields_required_for_run_completion_provider_path(@provider) do %>
