--- a/app/views/trips/_trip_parameters_panel.html.haml
+++ b/app/views/trips/_trip_parameters_panel.html.haml
@@ -20,16 +20,16 @@
           = label_tag :trip_provider, translate_helper("trip_provider")
         .col-sm-9
           = @trip.provider.try(:name)
-    -# - unless @is_repeating_run
 
     -# PICKUP AND APPOINTMENT TIME DATE AND TIME PICKERS
+    -# - unless @is_repeating_trip
     .form-group.col-sm-12
       .col-sm-3
         = f.label :date, translate_helper("date")
       .col-sm-9
         = f.text_field :date,
           :size => 10,
-          :value => format_time_for_listing_day(@trip.pickup_time),
+          value: format_time_for_listing_day(@trip.date),
           class: 'date-picker form-control',
           readonly: true
     .form-group.col-sm-12
@@ -41,15 +41,6 @@
           :value => @trip.pickup_time.try(:to_s, :time_only),
           class: 'time-picker form-control',
           readonly: true
-    -# .form-group.col-sm-12
-    -#   .col-sm-3
-    -#     = f.label :appointment_date, translate_helper("appointment_date")
-    -#   .col-sm-9
-    -#     = f.text_field :appointment_date,
-    -#       :size => 10,
-    -#       :value => format_time_for_listing_day(@trip.appointment_time),
-    -#       class: 'date-picker form-control',
-    -#       readonly: true
     .form-group.col-sm-12
       .col-sm-3
         = f.label :appointment_time, translate_helper("appointment_time")
